[docs/feat] Adicionada documentação do OpenApi e swagger